<resources>
    <string name="app_name">DopeApp</string>
    <string name="facebook_app_id">897214493734192</string>
    <string name="welcome_screen_welcome_message">Welcome to Dope</string>
    <string name="welcome_screen_sign_in_choise_text">Sign in or create a free account</string>
    <string name="welcome_screen_skip_login">Skip Login</string>
    <string name="welcome_screen_already_have_an_account_message">Already have an account?</string>
    <string name="welcome_screen_sign_in_now">Sign in now</string>
    <string name="signin_activity_label">Login</string>
    <string name="skip">Skip</string>
    <string name="lower_tab_daily_dope">Daily Dope</string>
    <string name="lower_tab_tranding">Tranding</string>
    <string name="lower_tab_friends">Friends</string>
    <string name="lower_tab_profile">Profile</string>
    <string name="fish_question">Some of the girls nicer and more beautiful?</string>
    <string name="fish_votes_quantity">565 Votes</string>
    <string name="fish_contact_name">Alisa Parker</string>
    <string name="friends_first_screen_main_message">Every is more fun with Friends</string>
    <string name="friends_first_screen_description_1">Search for your friends or follow someone</string>
    <string name="friends_first_screen_description_2">new based on our recommendations</string>
    <string name="friends_instagram_button_text">   Find from Instagram</string>
    <string name="friends_search_button_text">   Search friends in Dope</string>
    <string name="friends_notregistered_create_an_account">Create an Account</string>
    <string name="friends_notregistered_description_1">Join Dope to follow your friends.</string>
    <string name="friends_notregistered_description_2">Create cards and get thousands of votes</string>
    <string name="friends_notregistered_create_username">Create username</string>
    <string name="friends_notregistered_already_a_user">Already a User? Sign in</string>
    <string name="message_first_screen_title">Have more fun with Direct Messages</string>
    <string name="message_first_screen_description_1">Tap "+" in the top right corner to start</string>
    <string name="message_first_screen_description_2">a private conversation with friends</string>
    <string name="message_first_screen_text_3">You must both follow each other first!</string>
    <string name="message_first_screen_button_text">Send New Message</string>
    <string name="message_tab_plus_what_is_your_question">What is your question?</string>
    <string name="search">Search</string>
    <string name="message_title_1">Direct Messages</string>
    <string name="message_title_2">Message</string>
    <string name="message_title_3">New Message</string>
    <string name="message_title_4">Create Group</string>
    <string name="message_title_5">New Message</string>
    <string name="create_group">Create Group</string>
    <string name="send_group_message">Send Group Message</string>
    <string name="context_options_take_photo">Take Photo</string>
    <string name="context_options_choose_from_library">Choose from Library</string>
    <string name="context_options_search_web">Search Web</string>
    <string name="context_options_cancel">Cancel</string>
    <string name="dope_created_done">Done</string>
    <string name="dope_created_dope_created_message">Dope Created!</string>
    <string name="dope_created_description_1">We get many cards submitted everyday, so</string>
    <string name="dope_created_description_2">cross your fingers we select yours to be featured!</string>
    <string name="tab_plus_button_text">Create new Dope</string>
    <string name="search_web_edittext_hint">Enter keyword</string>
    <string name="share_dope_title_text">Share</string>
    <string name="share_dope_dummy_question_text">Some of the girls nicer and more beautiful?</string>
    <string name="share_dope_dummy_link_text">http://dope.com/share/2143535766/</string>
    <string name="share_dope_main_button_text">Copy link</string>
    <string name="search_friends_follow_string">Follow</string>
    <string name="search_friends_following_string">Following</string>
    <string name="search_friends_toolbar_title">Search Friends</string>
    <string name="main_activity_context_option_1_text">Share this Post</string>
    <string name="main_activity_context_option_2_text">View Profile</string>
    <string name="main_activity_context_option_3_text">Report this Post</string>
    <string name="main_activity_context_option_cancel_text">Cancel</string>
    <string name="main_activity_profile_option_1_text">Share Profile</string>
    <string name="main_activity_profile_option_2_text">Block User</string>
    <string name="main_activity_profile_option_3_text">Report User</string>
    <string name="main_activity_profile_option_cancel_text">Cancel</string>
    <string name="profile_overview_left_button_text">Follow</string>
    <string name="profile_overview_right_button_text">Share in Socials</string>
    <string name="profile_overview_dummy_user_name">Anya@</string>
    <string name="profile_overview_dummy_user_description">Anya Solov</string>
    <string name="report_post_title_text">Report Post</string>
    <string name="report_post_cause_question">Why are reporting this post?</string>
    <string name="report_post_option_cause_1">I just dont like it</string>
    <string name="report_post_option_cause_2">It shows nudity or graphic violence</string>
    <string name="report_post_option_cause_3">This user is bullying harassing me</string>
    <string name="comments_edittext_hint">Add a Comment</string>
    <string name="comments_toolbar_title">Comments</string>
    <string name="single_comment_dummy_user_name_1">Yana Sheleykis</string>
    <string name="single_comment_dummy_user_name_2">Nataliya Trush</string>
    <string name="single_comment_dummy_user_name_3">Heidi Cruz</string>
    <string name="single_comment_dummy_text_1">Hello!</string>
    <string name="single_comment_dummy_text_2">Being raised in Cyprus, I have always been thought to be a one-man band, which led me to study Computer Science &amp; New Media Design at Rochester Institute of Technology in New York.</string>
    <string name="single_comment_dummy_text_3">New Media Design at Rochester of Technology in New York.</string>
    <string name="share_profile_title_text">Share Profile</string>
    <string name="profile_followers_toolbar_title">Followers</string>
    <string name="profile_following_toolbar_title">Following</string>
    <string name="dope_statistics_comments_text">Comments</string>
    <string name="dope_statistics_share_text">Share</string>
    <string name="dope_statistics_toolbar_title">Statistics</string>
    <string name="profile_settings_left_toolbar_button_text">Cancel</string>
    <string name="profile_settings_right_toolbar_button_text">Done</string>
    <string name="profile_settings_toolbar_title">Settings</string>
    <string name="profile_settings_edit_profile_toolbar_title">Edit Profile</string>
    <string name="profile_settings_edit_profile_left_button_text">Edit Profile</string>
    <string name="profile_settings_private_information_subtitle">PRIVATE INFORMATION</string>
    <string name="profile_settings_username_field_hint">Username</string>
    <string name="profile_settings_first_last_name_field_hint">First and Last names</string>
    <string name="profile_settings_bio_field_hint">Bio</string>
    <string name="profile_settings_email_field_hint">E-mail</string>
    <string name="profile_settings_phone_field_hint">Phone</string>
    <string name="profile_settings_username_field_dummy_text"></string>
    <string name="profile_settings_gender_item_default_text">Gender</string>
    <string name="profile_settings_gender_item_helper_text">Not indicated</string>
    <string name="profile_settings_username_placeholder_text">Me</string>
    <string name="profile_settings_firstlastnames_placeholder_text">My Name</string>
    <string name="profile_overview_there_are_no_dopes_text_1">Have a question you want an answer to?</string>
    <string name="profile_overview_there_are_no_dopes_text_2">Create Dope now. You may even get</string>
    <string name="profile_overview_there_are_no_dopes_text_3">featured in the Community!</string>
    <string name="profile_overview_there_are_no_dopes_create_first_dope_button_text">Create your first Dope</string>
    <string name="profile_settings_fragment_account_section_title">ACCOUNT</string>
    <string name="profile_settings_fragment_edit_profile">Edit Profile</string>
    <string name="profile_settings_fragment_change_password">Change Password</string>
    <string name="profile_settings_fragment_about_section_title">ABOUT</string>
    <string name="profile_settings_fragment_about_dope_app">About DopeApp</string>
    <string name="profile_settings_fragment_share_with_friends">Share with Friends</string>
    <string name="profile_settings_fragment_contact_us">Contact us</string>
    <string name="profile_settings_fragment_restore_purchases">Restore Purchases</string>
    <string name="profile_settings_fragment_log_out">Log out</string>
    <string name="profile_settings_change_password_toolbar_title">Change Password</string>
    <string name="change_password_first_section_title">CURRENT PASSWORD</string>
    <string name="change_password_second_section_title">NEW PASSWORD</string>
    <string name="change_password_current_password_field_hint">Enter Current Password</string>
    <string name="change_password_create_password_field_hint">Create Password</string>
    <string name="change_password_confirm_password_field_hint">Confirm</string>
    <string name="contact_us_topic_text">DopeApp Feedback</string>
    <string name="contact_us_email">santa_claus@laplandia.com</string>
    <string name="about_dope_toolbar_title">About Dope</string>
    <string name="about_dope_not_toolbar_title">Frequently Asked Questions</string>
    <string name="about_dope_dummy_text_1">What is Instagram?</string>
    <string name="about_dope_dummy_text_2">Instagram is a fun and quickie way to share your life with friends through a series of pictures. Snap a photo with your mobile phone, then choose a filter to transform the image into a memory to keep around forever. We`re building Instagram to allow you to experience moments in your friend`s lives through pictures as they happen. We imagine a world more connected through photos.</string>
    <string name="about_dope_dummy_text_3">How much is your app?</string>
    <string name="about_dope_dummy_text_4">$0.00 - available for free in the Apple App Store and Google Play store.</string>
    <string name="about_dope_dummy_text_5">Where does the name come from?</string>
    <string name="about_dope_dummy_text_6">When we were kids we loved playing around with cameras. We loved how different types of old cameras marketed themselves as "instant" - something we take for granted today. We also felt that the snapshots people were taking were kind of like telegrams in that they got.</string>
    <string name="logout_confirmation_dialog_title">Confirm Logout</string>
    <string name="logout_confirmation_dialog_question">Are you sure you want to logout?</string>
    <string name="logout_confirmation_dialog_positive_button_text">Logout</string>
    <string name="logout_confirmation_dialog_negative_button_text">Cancel</string>
    <string name="start_log_in_toolbar_login">Login</string>
    <string name="start_log_in_toolbar_password_recovery">Password Recovery</string>
    <string name="start_login_username_hint">Username</string>
    <string name="start_login_password_hint">Password</string>
    <string name="auth_link_with_email_title">Link with Email</string>
    <string name="auth_link_with_email_text">Link your Email for getting more\ninfo about DopeApp</string>
    <string name="auth_link_with_email_hint">Email</string>
    <string name="auth_link_with_email_continue_button_text">Continue</string>
</resources>