<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.elantix.dopeapp.WelcomeActivity">

    <LinearLayout
        android:id="@+id/welcomeScreenContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeMessage"
            android:text="@string/welcome_screen_welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/welcomeScreenSignInChoise"
            android:text="@string/welcome_screen_sign_in_choise_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/welcome_screen_facebook_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitter_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>


        <TextView
            android:id="@+id/skipLogin"
            android:text="@string/welcome_screen_skip_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/alreadyHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/alreadyHaveAccountMessage"
                android:text="@string/welcome_screen_already_have_an_account_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/signInNowButton"
                android:text="@string/welcome_screen_sign_in_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>





    </LinearLayout>

</RelativeLayout>
