<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/profile_overview_there_are_no_dopes_button_width"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    >

    <TextView
        android:layout_marginTop="@dimen/auth_link_with_email_margin_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_link_with_email_title"
        android:textColor="@color/white_text_color"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/auth_title_size"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_link_with_email_margin_2"
        android:layout_gravity="center_horizontal"
        android:text="@string/auth_link_with_email_text"
        android:textColor="@color/auth_text_color"
        android:lineSpacingMultiplier="1.2"
        android:gravity="center"
        android:textSize="@dimen/auth_text_size"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_link_with_email_margin_3"
        android:background="@null"
        android:gravity="center_horizontal"
        android:hint="@string/auth_link_with_email_hint"
        android:textColorHint="@color/auth_text_color"
        android:textColor="@color/white_text_color"
        android:textSize="@dimen/auth_hint_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/auth_edittext_underline_margin"
        android:background="@color/start_login_hint_color" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/start_pass_recovery_submit_button"
        fancy:fb_defaultColor="@color/start_login_toolbar_fancy_button_color"
        fancy:fb_focusColor="#000"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="@dimen/buttons_corner_radius"
        fancy:fb_text="@string/auth_link_with_email_continue_button_text"
        fancy:fb_textColor="@color/white_text_color"
        fancy:fb_textSize="@dimen/button_text_size"
        android:layout_width="@dimen/profile_overview_there_are_no_dopes_button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/auth_link_with_email_margin_4"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" />

</LinearLayout>