<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/profile_settings_background_color"
    >

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_button_size"
        android:background="@color/main_activity_primary_color"
        app:theme="@style/ThemeOverlay.AppCompat.Dark">

        <TextView
            android:id="@+id/change_password_left_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_button_size"
            android:layout_gravity="left"
            android:layout_marginRight="@dimen/toolbar_button_left_margin"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/profile_settings_left_toolbar_button_text" />

        <TextView
            android:id="@+id/change_password_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_settings_change_password_toolbar_title"
            android:textColor="@color/white_text_color"
            android:textSize="@dimen/toolbar_title_font_size" />

        <TextView
            android:id="@+id/change_password_right_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_button_size"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/toolbar_button_right_margin"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/profile_settings_right_toolbar_button_text" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_settings_distance_between_sections"
        android:background="@drawable/bottom_border_1_px"
        android:paddingLeft="@dimen/profile_settings_section_item_horizontal_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/profile_settings_private_information_textview_margin_bottom"
            android:layout_marginLeft="6dp"
            android:text="@string/change_password_first_section_title"
            android:textColor="@color/profile_settings_hint_text_color"
            android:textSize="@dimen/profile_settings_text_in_between_sections_size"

            />

    </RelativeLayout>

    <!--Current Password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border_1_px_white_background"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/change_password_current_password_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_settings_section_item_height"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:background="@drawable/bottom_border_1_px"
            android:hint="@string/change_password_current_password_field_hint"
            android:textColor="@color/black_text_color"
            android:textColorHint="@color/profile_settings_hint_text_color"
            android:textSize="@dimen/profile_settings_section_item_text_size"
            android:paddingLeft="@dimen/profile_settings_only_text_item_left_padding"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_settings_distance_between_sections"
        android:background="@drawable/bottom_border_1_px"
        android:paddingLeft="@dimen/profile_settings_section_item_horizontal_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/profile_settings_private_information_textview_margin_bottom"
            android:layout_marginLeft="6dp"
            android:text="@string/change_password_second_section_title"
            android:textColor="@color/profile_settings_hint_text_color"
            android:textSize="@dimen/profile_settings_text_in_between_sections_size"

            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border_1_px_white_background"
        android:orientation="vertical"
        >
        <!--Create Password-->
        <EditText
            android:id="@+id/change_password_create_password_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_settings_section_item_height"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_border_1_px"
            android:hint="@string/change_password_create_password_field_hint"
            android:textColor="@color/black_text_color"
            android:inputType="textPassword"
            android:textColorHint="@color/profile_settings_hint_text_color"
            android:textSize="@dimen/profile_settings_section_item_text_size"
            android:paddingLeft="@dimen/profile_settings_only_text_item_left_padding"
            />
        <!--Confirm-->
        <EditText
            android:id="@+id/change_password_confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_settings_section_item_height"
            android:gravity="center_vertical"
            android:hint="@string/change_password_confirm_password_field_hint"
            android:textColor="@color/black_text_color"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:textColorHint="@color/profile_settings_hint_text_color"
            android:textSize="@dimen/profile_settings_section_item_text_size"
            android:paddingLeft="@dimen/profile_settings_only_text_item_left_padding"
            />

    </LinearLayout>

</LinearLayout>